Atualizar o style.css Adicionado espaçamento na id "ano".
Adicionado "margin-left: 2px" na id "ano" no footer para dar espaço entre o "©" e o ano.

--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,9 @@ footer img {
 footer b {
     margin-right: 5px;
 }
+#ano {
+    margin-left: 2px;
+}
 /* ==== Barra de rolagem ==== */
 ::-webkit-scrollbar {
     width: 0.7vw;
