--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,8 @@ footer b {
     margin-right: 5px;
 }
 #ano {
-    margin-left: 2px;
+    margin: 0 2px;
+		 font-weight: 400;
 }
 /* ==== Barra de rolagem ==== */
 ::-webkit-scrollbar {
